--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <script src="index.js"></script>
-    
+    <div class="game">
+        <div class="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <!-- A Log of the game -->
+        <div class="info">
+            
+        </div>
+    </div>
 </body>
 </html>
