--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="index.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game">
+        <h1>Rock Paper Scissors</h1>
         <div class="buttons">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
