--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="buttons">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
-            <button id="scissors">Scissors</button>
+            <button id="scissor">Scissors</button>
         </div>
         <!-- A Log of the game -->
         <div class="info">
