Added Structure for logs and scoreboard

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </div>
         <!-- A Log of the game -->
         <div class="info">
-            
+            <p>Score: </p>
+            <div class="log">
+                Log:
+            </div>
         </div>
     </div>
 </body>
