--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <!-- A Log of the game -->
         <div class="info">
-            <p>Score: </p>
-            <div class="log">
+            <p id="score">Score: </p>
+            <div class="log" id="log">
                 Log:
             </div>
         </div>
