Added Log logic

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <!-- A Log of the game -->
         <div class="info">
             <p id="score">Score: </p>
-            <div class="log" id="log">
-                Log:
+            <div class="log">
+                <p id="log"></p>
             </div>
         </div>
     </div>
