Removed p tag from div

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <!-- A Log of the game -->
         <div class="info">
             <p id="score">Score: </p>
-            <div class="log">
-                <p id="log"></p>
+            <div class="log" id="log">
             </div>
         </div>
     </div>
