--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <!-- A Log of the game -->
         <div class="info">
-            <p id="score">Score: </p>
+            <p id="score">Score: 0,0</p>
             <div class="log" id="log">
             </div>
         </div>
