Add reset button html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <div class="log" id="log">
             </div>
         </div>
+        <div class="restart">
+            <!-- Add Reset button  -->
+        </div>
     </div>
 </body>
 </html>
